Planes with Rigid Body always keep distance to colliding objects #34410

Closed
opened 2013-02-24 23:01:24 +01:00 by Michael Färber · 4 comments

%%%--- Operating System, Graphics card ---
Ubuntu 12.10, ATI RV710

- Blender version with error, and version that worked ---

2.66 (official), no previous official version had the Rigid Body function I used

- Short description of error ---

When enabling the new Rigid Body physics for a plane to let it collide with other objects, there is always a small distance between the plane and the other object.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

(If you use the attached "planebug.blend", skip to step 5.)
1.) Open Blender.
2.) Add plane to default scene below the cube.
3.) Enable Rigid Body in physics for cube.
4.) Enable Rigid Body in physics for plane, and set type to "Passive".
5.) Press ALT+A to see the animation. The cube should fall onto the plane, but not touch it and always rest a little bit above it. I noticed this behaviour only for planes; cube-cube collisions work fine, for example.

Thank you!%%%

%%%--- Operating System, Graphics card --- Ubuntu 12.10, ATI RV710 - Blender version with error, and version that worked --- 2.66 (official), no previous official version had the Rigid Body function I used - Short description of error --- When enabling the new Rigid Body physics for a plane to let it collide with other objects, there is always a small distance between the plane and the other object. - Steps for others to reproduce the error (preferably based on attached .blend file) --- (If you use the attached "planebug.blend", skip to step 5.) 1.) Open Blender. 2.) Add plane to default scene below the cube. 3.) Enable Rigid Body in physics for cube. 4.) Enable Rigid Body in physics for plane, and set type to "Passive". 5.) Press ALT+A to see the animation. The cube should fall onto the plane, but not touch it and always rest a little bit above it. I noticed this behaviour only for planes; cube-cube collisions work fine, for example. Thank you!%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Thanks for the report.
This is not really a bug, using convex hull shapes for planes is just not working well if when embedding the collision margin.
It's better to use a mesh shape for passive planes. For acrive rigid bodies, objects with no volmue should be avoided, but you could use a box shape.

I'll look into making convex hulls work better for planes though.%%%

%%%Thanks for the report. This is not really a bug, using convex hull shapes for planes is just not working well if when embedding the collision margin. It's better to use a mesh shape for passive planes. For acrive rigid bodies, objects with no volmue should be avoided, but you could use a box shape. I'll look into making convex hulls work better for planes though.%%%

%%%Fixed in svn r54855.%%%

%%%Fixed in svn r54855.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34410
No description provided.